syntax = "proto3";

package backend;

import "shared.proto";

service AppsService {
    rpc Search (SearchAppsRequest) returns (AppsElasticResponse) {
    }
    rpc Apps (ListAppsRequest) returns (AppsMongoResponse) {
    }
}

// Search
message SearchAppsRequest {
    int64 offset = 1;
    int32 limit = 2;
    int64 sortField = 3;
    int32 sortOrder = 4;
}

message AppsMongoResponse {
    PaginationResponse pagination = 1;
    repeated AppMongoResponse apps = 2;
}

message AppMongoResponse {
    int32 id = 1;
    string name = 2;
}

// List
message ListAppsRequest {
    int64 offset = 1;
    int64 limit = 2;
    int64 sortField = 3;
    int32 sortOrder = 4;
    repeated int32 ids = 5;
    repeated int32 tags = 6;
    repeated int32 genres = 7;
    repeated int32 categories = 8;
    repeated int32 developers = 9;
    repeated int32 publishers = 10;
    repeated string platforms = 11;
}

message AppsElasticResponse {
    PaginationResponse pagination = 1;
    repeated AppElasticResponse apps = 2;
}

message AppElasticResponse {
    int32 achievementsCounts = 1;
    float floatachievementsAvg = 2;
    map<string, string> achievementIcons = 3;
    repeated string aliases = 4;
    repeated int32 categories = 5;
    repeated int32 developers = 6;
    int32 followers = 7;
    repeated int32 genres = 8;
    string icon = 9;
    int32 id = 10;
    string name = 11;
    string nameMarked = 12;
    repeated string platforms = 13;
    int32 players = 14;
    map<string, Price> prices = 15;
    repeated int32 publishers = 16;
    int64 releaseDate = 17;
    float score = 18;
    float searchScore = 19;
    repeated int32 tags = 20;
    string type = 21;
    float trend = 22;
    float wishlistAvg = 23;
    int32 wishlistCount = 24;
}
